src/test/deca/context/valid/SansObjet/Plus-readInt-int.deca
// Description:
//      using readInt in a plus operation
//
// Results:
//     nothing
//
// Historique:
//    cree le 14/01/2022

{
    int x =  readInt() + 3 ;
}
